Add procedural to BOBJ models (requires specific structure)